--- a/Variáveis.ipynb
+++ b/Variáveis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Variáveis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN3bBwGHbtCUBMLWclHo4fk",
+      "authorship_tag": "ABX9TyMrIAmSCyqWZks5klcNzuw6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,19 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/MagdaSousa/Estatistica/blob/main/Vari%C3%A1veis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Fontes de pesquisa para elaboração dessa tarefa:\n",
+        "\n",
+        "http://archive.ics.uci.edu/ml/datasets/Iris\n",
+        "https://www.datacamp.com/community/tutorials/machine-learning-in-r\n",
+        "https://posgraduando.com/as-variaveis-quantitativas-e-qualitativas-e-os-testes-estatisticos/#:~:text=Uma%20vari%C3%A1vel%20originalmente%20quantitativa%20pode,%2C%20%C3%A9%20qualitativa%20(ordinal)."
+      ],
+      "metadata": {
+        "id": "c8y2ohS7Rhvp"
+      }
     },
     {
       "cell_type": "markdown",
