--- a/Correlação_linear.ipynb
+++ b/Correlação_linear.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Correlação linear.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMtPL34eM0HFZL9kn0R7zy3",
+      "authorship_tag": "ABX9TyP3AO3dWcZ8Pq4yqUndIRj0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,9 +30,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Informações sobre o conjunto de dados obtido do site Kaggle:   \n",
-        "A empresa automobilística chinesa Geely Auto aspira a entrar no mercado dos EUA estabelecendo sua unidade de fabricação lá e produzindo carros localmente para competir com seus colegas americanos e europeus.\n",
-        "\n",
+        "Informações sobre o conjunto de dados obtido do site Kaggle: https://www.kaggle.com/datasets/hellbuoy/car-price-prediction  \n",
+        "Dados relacionados a empresa automobilística chinesa Geely Auto.\n",
         "Eles contrataram uma empresa de consultoria automobilística para entender os fatores dos quais depende o preço dos carros."
       ],
       "metadata": {
